--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
+<main>
+    <div class="header-section">
+        <div class="container ">
+            <div class="row">
+                <div class="col header-content pt-5">
+                    <h1>You Want It We Got It!!!</h1>
+                </div>
+                <div class="col text-center p-5">
+                    <div class="new-account">
+                        <h3 class="pt-3">Create a new account</h3>
+                        <form>
+                            <div class="row m-3">
+                                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="inputEmail3">
+                                </div>
+                            </div>
+                            <div class="row m-3">
+                                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="inputPassword3">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-3">Sign in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome To my Website</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
