--- a/ECommerce.App/wwwroot/css/site.css
+++ b/ECommerce.App/wwwroot/css/site.css
@@ -29,6 +29,8 @@ main {
     background-size: cover;
     background-position: center;
     position: relative;
+    background-repeat: no-repeat;
+    overflow-y: auto;
 }
 
 .header-content {
