Landing Page and signIn

--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center" style="background-image:url(../images/LandingPage.png);
+background-size: cover;
+background-repeat: no-repeat;
+height: 100vh;
+max-height: 100vh;
+overflow-y: auto;
+padding: 20px; ">
+    >
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
