IMplemented sign in and signUp Function

--- a/ECommerce.App/wwwroot/css/site.css
+++ b/ECommerce.App/wwwroot/css/site.css
@@ -16,3 +16,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+.backgroundBroadway {
+    background-image: url(../images/LandingPage1.jpg);
+    background-size: cover; /* Cover the entire element while maintaining aspect ratio */
+    background-repeat: no-repeat; /* Prevent image repetition */
+    height: 100vh;
+    max-height: 80vh; /* Adjust the maximum height as needed */
+    overflow-y: auto; /* Enable vertical scrolling when content exceeds max-height */
+    padding: 20px; /* Add padding as needed for spacing */
+}
