--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <button class="btn btn-outline-light text-white guest-button" type="submit">View as guest</button>
                         </li>
                         <li class="nav-item m-1">
-                            <button class="btn btn-light signup-button" type="submit">Sign up</button>
+                            <button class="btn btn-light signup-button" type="submit">Sign in</button>
                         </li>
                     </ul>
                 </div>
