--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                                     <input type="password" class="form-control" id="inputPassword3">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary mb-3">Sign in</button>
+                            <button type="submit" class="btn btn-primary mb-3">Sign Up</button>
                         </form>
                     </div>
                 </div>
