--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<style>
+    body {
+       
+        background-image: url('Images/Background.jpg');
+        background-size: cover; /* Adjust as needed */
+        background-repeat: no-repeat;
+        background-attachment: fixed; /* Optional, to make the image fixed */
+        /* You can also set other background properties like background-position, background-color, etc. */
+    }
+
+    .text-center {
+        /* Add styles for your content here */
+     
+        color: white; /* Example text color */
+        padding: 100px; /* Example padding */
+    }
+</style>
+
+
+<div class="text-center " >
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
