--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -12,21 +12,28 @@
                 <div class="col text-center p-5">
                     <div class="new-account">
                         <h3 class="pt-3">Create a new account</h3>
-                        <form>
+                        @using (@Html.BeginForm("Signup", "Home", FormMethod.Post))
+                        {
                             <div class="row m-3">
-                                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                                <label for="inputFullname" class="col-sm-2 col-form-label">Name</label>
                                 <div class="col-sm-10">
-                                    <input type="email" class="form-control" id="inputEmail3">
+                                    <input type="text" class="form-control" id="inputFullName" name="userName">
                                 </div>
                             </div>
                             <div class="row m-3">
-                                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                                 <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="inputPassword3">
+                                    <input type="email" class="form-control" id="inputEmail" name="email">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary mb-3">Sign Up</button>
-                        </form>
+                            <div class="row m-3">
+                                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="inputPassword" name="password">
+                                </div>
+                            </div>
+                            <input type="submit" value="Sign Up" class="btn btn-primary mb-3" />
+                        }
                     </div>
                 </div>
             </div>
