--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Ecommerse.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -23,13 +24,66 @@
                             <button class="btn btn-outline-light text-white guest-button" type="submit">View as guest</button>
                         </li>
                         <li class="nav-item m-1">
-                            <button class="btn btn-light signup-button" type="submit">Sign in</button>
+                            <button type="button" class="btn btn-primary signin-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Sign in
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content text-center">
+                                        <div class="modal-body">
+                                            <img class="mb-2" src="~/images/LOGO.png" />
+                                            <h3>Sign In</h3>
+                                            <form>
+                                                <div class="row m-3">
+                                                    <div class="col-sm-12">
+                                                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="example@mail.com">
+                                                    </div>
+                                                </div>
+                                                <div class="row m-3">
+                                                    <div class="col-sm-12">
+                                                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="********">
+                                                    </div>
+                                                </div>
+
+                                                <div class="d-flex justify-content-around align-items-center mb-4">
+                                                    <!-- Checkbox -->
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                                                        <label class="form-check-label" for="form1Example3"> Remember me </label>
+                                                    </div>
+                                                    <a href="#!">Forgot password?</a>
+                                                </div>
+
+                                                <!-- Submit button -->
+                                                <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+
+                                                <hr />
+                                                <div>
+                                                    <h3>OR</h3>
+                                                    <p>Sign in with...</p>
+                                                    <a class="btn btn-primary btn-lg btn-block mb-3" style="background-color: #3b5998" href="/"
+                                                       role="button">
+                                                        <i class="bi bi-facebook me-2"></i>Continue with Facebook
+                                                    </a>
+                                                    <a class="btn btn-primary btn-lg btn-block mb-3" style="background-color: #55acee" href="/"
+                                                       role="button">
+                                                        <i class="bi bi-twitter me-2"></i>Continue with Twitter
+                                                    </a>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container-fluid p-0">
         <main role="main" class="p-0">
             @RenderBody()
