added json filesd

--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -46,28 +46,7 @@
      @section scripts{
           <script>
         $(document).ready(function(){
-            $("#linkSubmit").click(function(){
-                validateUser();
-                function validateUser(){
-                     var email=$("#exampleFormControlInput1").val();
-               var password=$("#exampleFormControlInput2").val();
-               const authenticateUser = {userName:email, password:password};
-               const data = JSON.stringify(authenticateUser);
-               $.ajax({
-                      url: "/home/Authenticate?",
-                      type:"post",
-                      contentType:"application/json",
-                      data:data,
-                      context: document.body
-                    }).done(function() {
-                      $( this ).addClass( "done" );
-               });
-                }
-              
-               console.log(email);
-               console.log(password);
-               
-            });
+           authentication.validateUser();
         alert("Hi Everyone!!!");
         });
     </script>
