--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <button class="btn btn-outline-light text-white guest-button" type="submit">View as guest</button>
                         </li>
                         <li class="nav-item m-1">
-                            <button type="button" class="btn btn-primary signin-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button type="button" class="btn signin-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Sign in
                             </button>
 
