--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -46,9 +46,11 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/js/constant.js" asp-append-version="true" type="text/javascript"></script>*@
+    <script src="~/js/helper.js" asp-append-version="true" type="text/javascript"></script>
     <script src="~/js/auth.js" asp-append-version="true" type="text/javascript"></script>
     <script src="~/js/site.js" asp-append-version="true" type="text/javascript"></script>
-  
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
