signIn and signUp form

--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center" style="background-image:url(../images/LandingPage.png);
+<div class="text-center" style="background-image:url(../images/LP.jpg);
 background-size: cover;
 background-repeat: no-repeat;
 height: 100vh;
