--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -24,7 +24,7 @@
 
                                 <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
-                               <a id  ="linkSubmit">Submit</a>
+                               <button button  ="linkSubmit">Submit</button>
 
 
 
@@ -49,6 +49,15 @@
             $("#linkSubmit").click(function(){
                 var email = $("#email").val();
                 var password = $("#password").val();
+
+                $.ajax({
+                    url: "/home/Authenticate?email="+email+ "&password=" +password+"",
+                    type:"post",
+                    oncontext: document.body
+                }).done(function () { 
+                    $(this).addClass( "done" );               
+                });
+
                 console.log(email);
                 console.log(password);
             });
