--- a/ECommerce.App/Views/Home/Authenticate.cshtml
+++ b/ECommerce.App/Views/Home/Authenticate.cshtml
@@ -3,7 +3,9 @@
 
 @{
     <div>@ViewBag.User</div>
-    <div>@Model.Email</div>
-    <div>@Model.Password</div>
+    <div>Hi!@Model.Email</div>
+    <h1>Welcome to our Page</h1>
+
+    
     
 }
