--- a/ECommerce.App/Views/Home/Authenticate.cshtml
+++ b/ECommerce.App/Views/Home/Authenticate.cshtml
@@ -1,8 +1,5 @@
-﻿@using ECommerce.App.Models
-@model AuthenticateUser
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
-    <div>@ViewBag.User</div>
-    <div>Hi @Model.UserName</div>
-    <div>Hi @Model.Password</div>
-
 }
