--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -1,63 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    //<div>
-    //    <div>
-    //        <label>UserEmail</label>
-    //        <input />
-    //    </div>
-    //    <div>
-    //        <label>Password</label>
-    //        <input />
-    //    </div>
-    //    <button>Submit</button>
-    //</div>
-
-    <div class="card">
-        <div class="card-header">
-            SignIn
+﻿<body class="main-bg">
+    <div class="login-container text-c animated flipInX">
+        <div>
+            <h1 class="logo-badge text-whitesmoke"><span class="fa fa-user-circle"></span></h1>
         </div>
-        <div class="card-body">
-            @using (@Html.BeginForm("Authenticate", "Home", FormMethod.Post))
-            {
-                <div class="row">
-                    <div class="col-md-4">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" name="userName" placeholder="name@example.com">
-                    </div>
-                    <div class="col-md-4">
-                        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleFormControlInput2" name="password" placeholder="password">
-                    </div>
-
-                    <div class="mb-3 ">
-                        <a id="linkSubmit">Submit</a>
-
-                    </div>
+        <h3 class="text-whitesmoke">Sign In Template</h3>
+        <p class="text-whitesmoke">Sign In</p>
+        <div class="container-content">
+            <form class="margin-t">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Username" required="">
                 </div>
-            }
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="*****" required="">
+                </div>
+                <button type="submit" class="form-button button-l margin-b">Sign In</button>
 
-
-
+                <a class="text-darkyellow" href="#"><small>Forgot your password?</small></a>
+                <p class="text-whitesmoke text-center"><small>Do not have an account?</small></p>
+                <a href="@Url.Action("SignUp","Home")" class="btn btn-primary">SignUp</a>
+            </form>
+            <p class="margin-t text-whitesmoke"><small> Buy Anything &copy; 2023</small> </p>
         </div>
     </div>
-}
-    @*@section scripts{
-          <script>
-        $(document).ready(function(){
-            authentication.initialize();
-            authentication.authenticateuser();
-           
-        alert("Hi Everyone!!!");
-        });
-    </script>
-     }*@
-
-
-
-
-     
-
-
-
+</body>
