--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -43,7 +43,7 @@
         </div>
     </div>
 }
-    @*@section scripts{
+    @section scripts{
           <script>
         $(document).ready(function(){
             authentication.initialize();
@@ -52,7 +52,7 @@
         alert("Hi Everyone!!!");
         });
     </script>
-     }*@
+     }
 
 
 
