Script in comment

--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -43,7 +43,7 @@
         </div>
     </div>
 }
-    @section scripts{
+   @*  @section scripts{
           <script>
         $(document).ready(function(){
             authentication.initialize();
@@ -53,7 +53,7 @@
         });
     </script>
      }
-
+ *@
 
 
 
