some error in AuthService.cs  and unable #

--- a/ECommerce.App/Views/Account/Authenticate.cshtml
+++ b/ECommerce.App/Views/Account/Authenticate.cshtml
@@ -7,6 +7,6 @@
 
 @{
     <div> @ViewBag.User</div>
-    <div>  Hello  @Model.userName </div>
-    <div>   @Model.password </div>
+    <div>  Hello  @Model.UserName </div>
+    <div>   @Model.Password </div>
 }
