--- a/ECommerce.App/Views/Account/SignIn.cshtml
+++ b/ECommerce.App/Views/Account/SignIn.cshtml
@@ -3,6 +3,11 @@
 *@
 @{
 }
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
 @{
     ViewData["Title"] = "Sign In";
 }
@@ -16,28 +21,28 @@
 
     <!-- ... (form content) ... -->
     <h5>@ViewData["Title"]</h5>
-        @using (Html.BeginForm("Authenticate", "Home", FormMethod.Post))
-        {
-            <div class="form-group cubic-input">
+    @using (Html.BeginForm("Authenticate", "Account", FormMethod.Post))
+    {
+        <div class="form-group cubic-input">
 
-                <label for="Email">Email</label>
-                <input type="email" id="Email" name="userName" class="form-control" placeholder="name@gmail.com" required />
-            </div>
-            <div class="form-group cubic-input">
-                <label for="Password">Password</label>
-                <input type="password" id="Password" name="password" class="form-control " required />
-            </div>
-            <div class="form-group">
-                <a href="/ForgotPassword" class="forgot-password-link">Forgot Password?</a>
-            </div>
-            <div class="form-group">
-                <a href="/ForgotPassword" class="forgot-password-link">Already have an account?</a>
-            </div>
-            <button type="submit" class="btn btn-primary cubic-button">Sign In</button>
+            <label for="Email">Email</label>
+            <input type="email" id="Email" name="userName" class="form-control" placeholder="name@gmail.com" required />
+        </div>
+        <div class="form-group cubic-input">
+            <label for="Password">Password</label>
+            <input type="password" id="Password" name="password" class="form-control " required />
+        </div>
+        <div class="form-group">
+            <a href="/ForgotPassword" class="forgot-password-link">Forgot Password?</a>
+        </div>
+        <div class="form-group">
+            <a href="/ForgotPassword" class="forgot-password-link">Already have an account?</a>
+        </div>
+        <button type="submit" class="btn btn-primary cubic-button">Sign In</button>
 
-        }
-       
-    
+    }
+
+
 </div>
 
 
@@ -47,8 +52,8 @@
     /* CSS for cubic-shaped form elements */
     .centered-form h5 {
         text-align: center;
-       
     }
+
     .btn-primary:hover {
         color: yellow;
         cursor: pointer;
@@ -58,7 +63,7 @@
         background-color: yellow;
         color: black;
     }
-   
+
     .cubic-input {
         border: none;
         border-bottom: 2px solid #3498db;
@@ -137,7 +142,5 @@
         border-radius: .25rem;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
-    
-
 </style>
 
