Maintainend the code

--- a/ECommerce.App/Views/Account/Authenticate.cshtml
+++ b/ECommerce.App/Views/Account/Authenticate.cshtml
@@ -2,7 +2,7 @@
 @model AuthenticateUser
 @{
     <div>@ViewBag.User</div>
-    <div>Hi @Model.UserName</div>
+    <div>Hi @Model.Email</div>
     <div>Hi @Model.Password</div>
 
 }
