Implemented passing the values to the view

--- a/ECommerce.App/Views/Home/Index.cshtml
+++ b/ECommerce.App/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="card-body">
             <h5 class="card-title">Are you a new user?</h5>
             <p class="card-text">Please click below to sign up!!</p>
-            <a href="@Url.Action("SignUp","Home")" class="btn btn-primary">SignUp</a>
+            <a href="@Url.Action("SignUp","Account")" class="btn btn-primary">SignUp</a>
         </div>
     </div>
     
