--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -1,33 +1,35 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using ECommerce.App.Models
+
+@model SignUpViewModel
 @{
     <h2>Signup Form</h2>
     <form class="row g-3">
   <div class="col-md-4">
-    <label for="validationDefault01" class="form-label">First name</label>
+    <label for="validationDefault01" class="form-label">Name</label>
     <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
   </div>
+
   <div class="col-md-4">
-    <label for="validationDefault02" class="form-label">Last name</label>
-    <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
-  </div>
-  <div class="col-md-4">
-    <label for="validationDefaultUsername" class="form-label">Username</label>
+    <label for="validationDefaultUsername" class="form-label">Email</label>
     <div class="input-group">
-      <span class="input-group-text" id="inputGroupPrepend2">@@</span>
-      <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+                <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
     </div>
   </div>
   <div class="col-md-6">
-    <label for="validationDefault03" class="form-label">City</label>
+    <label for="validationDefault03" class="form-label">Age</label>
     <input type="text" class="form-control" id="validationDefault03" required>
   </div>
   <div class="col-md-3">
     <label for="validationDefault04" class="form-label">State</label>
     <select class="form-select" id="validationDefault04" required>
       <option selected disabled value="">Choose...</option>
-      <option>...</option>
+     
+      
+
+      @foreach(var state in ViewBag.States){
+          <option>state.Name</option>
+      }
+      
     </select>
   </div>
   <div class="col-md-3">
