--- a/ECommerce.App/Views/Home/Authenticate.cshtml
+++ b/ECommerce.App/Views/Home/Authenticate.cshtml
@@ -2,6 +2,6 @@
 @model AuthenticateUser
 @{
     <div> ViewBag.User</div>
-    <div> Hi @Model. Username</div>
-    <div> @Model>Password</div>
+    <div> Hi @Model.Username</div>
+    <div> Hi @Model.Password</div>
 }
