--- a/ECommerce.App/Views/Home/SignUp.cshtml
+++ b/ECommerce.App/Views/Home/SignUp.cshtml
@@ -25,8 +25,16 @@
     <div class="col-md-3">
         <label for="validationDefault04" class="form-label">State</label>
         <select class="form-select" id="validationDefault04" required>
-            <option selected disabled value="">Choose...</option>
-            <option>...</option>
+            <option selected disabled value="">
+            <option value="1">State</option>
+            <option value="2">Koshi</option>
+            <option value="3">Madhesh</option>
+            <option value="5">Bagmati</option>
+            <option value="6">Gandaki</option>
+            <option value="7">Lumbini</option>
+            <option value="7">Karnali</option>
+            </option>
+            
         </select>
     </div>
     <div class="col-md-3">
