--- a/ECommerce.App/Views/Home/SignIn.cshtml
+++ b/ECommerce.App/Views/Home/SignIn.cshtml
@@ -4,7 +4,7 @@
             <h1 class="logo-badge text-whitesmoke"><span class="fa fa-user-circle"></span></h1>
         </div>
         @using (@Html.BeginForm("Authenticate","Home", FormMethod.Post))
-        <h3 class="text-whitesmoke">Sign In Template</h3>
+        @* <h3 class="text-whitesmoke">Sign In Template</h3> *@
         <p class="text-whitesmoke">Sign In</p>
         <div class="container-content">
             
