tblUser Datatype chage

--- a/ECommerce.App/Views/Account/Authenticate.cshtml
+++ b/ECommerce.App/Views/Account/Authenticate.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-@model ECommerce.App.ViewsModels.AuthenticateUser
+@model AuthenticateUser
 
 <div>@ViewBag.User</div>
 <div>Hello @Model.UserName</div>
