--- a/ECommerce.App/Views/Account/SignIn.cshtml
+++ b/ECommerce.App/Views/Account/SignIn.cshtml
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <a href="/ForgotPassword" class="forgot-password-link">Already have an account?</a>
             </div>
-            <button type="submit" class="btn btn-primary" id="SignIn">Submit</button>
+            <button type="submit" class="btn btn-primary" id="linkSignIn">Submit</button>
         </form>
 
    
