--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -37,9 +37,10 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3" id="content-wrapper">
             @RenderBody()
         </main>
+       
     </div>
 
     <footer class="border-top footer text-muted">
