--- a/ECommerce.App/Views/Account/Authenticate.cshtml
+++ b/ECommerce.App/Views/Account/Authenticate.cshtml
@@ -6,5 +6,5 @@
 @model AuthenticateUser
 
 <div>@ViewBag.User</div>
-<div>Hello @Model.UserName</div>
+<div>Hello @Model.Email</div>
 <div>@Model.Password</div>
