--- a/ECommerce.App/Views/Shared/_Layout.cshtml
+++ b/ECommerce.App/Views/Shared/_Layout.cshtml
@@ -25,9 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href=@Url.Action("SignIn","Account")>SignIn</a>
-                        </li>
+                      
                     </ul>
 
                     <partial name="_LoginPartial" />
@@ -49,6 +47,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @*<script src="~/js/constant.js" asp-append-version="true" type="text/javascript"></script>*@
+    <script src="~/js/constant.js" asp-append-version="true" type="text/javascript"></script>
     <script src="~/js/helper.js" asp-append-version="true" type="text/javascript"></script>
     <script src="~/js/auth.js" asp-append-version="true" type="text/javascript"></script>
     <script src="~/js/site.js" asp-append-version="true" type="text/javascript"></script>
