--- a/ECommerce.App/Views/Shared/_LoginPartial.cshtml
+++ b/ECommerce.App/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,13 @@
     </li>
     <li class="nav-item">
         <a  class="nav-link text-dark" href=@Url.Action("SignOut","Account")>Logout</a>
-        
-    </li>
-}
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" href=@Url.Action("SignIn","Account")>SignIn</a>
+        </li>
+    }
 
 </ul>
