--- a/ECommerce.App/Views/Home/GetProductByID.cshtml
+++ b/ECommerce.App/Views/Home/GetProductByID.cshtml
@@ -10,9 +10,17 @@
         <h5 class="card-title">@Model.Name</h5>
         <p class="card-text">@Model.Description</p>
         <p class="card-text">@Model.Manufacturer</p>
-        <p class="card-text">@Model.Category</p>
+        @foreach(var cat in Model.Category)
+        {
+           <p>@cat.Name</p>
+        }
+        
         <p class="card-text">@Model.Model</p>
+        
         <p class="card-text">@Model.Url</p>
         <a href="#" class="btn btn-primary">@Model.Price</a>
+        <a href="#" class="btn btn-info" id="lnkBuy" data-id="@Model.Sku">Buy Now</a>
+        <a href="#" class="btn btn-warning">Add to Cart</a>
+
     </div>
 </div>
