--- a/ECommerce.App/Views/Account/SignUp.cshtml
+++ b/ECommerce.App/Views/Account/SignUp.cshtml
@@ -20,6 +20,10 @@
                 <label for="inputEmail4" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail4">
             </div>
+            <div class="col-md-6">
+                <label for="inputContactNumber" class="form-label">ContactNumber</label>
+                <input type="tel" class="form-control" id="inputContactNumber">
+            </div>
 
             <div class="col-md-2">
                 <label for="inputPostCode" class="form-label">PostCode</label>
